--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,18 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#72a6f8",
-        "activityBar.activeBorder": "#fde1ec",
+        "activityBar.background": "#d272f8",
+        "activityBar.activeBorder": "#f9d886",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#fde1ec",
+        "activityBarBadge.background": "#f9d886",
         "activityBarBadge.foreground": "#15202b",
-        "titleBar.activeBackground": "#4287f5",
-        "titleBar.inactiveBackground": "#4287f599",
+        "titleBar.activeBackground": "#c242f5",
+        "titleBar.inactiveBackground": "#c242f599",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.background": "#4287f5",
-        "statusBarItem.hoverBackground": "#72a6f8",
+        "statusBar.background": "#c242f5",
+        "statusBarItem.hoverBackground": "#d272f8",
         "statusBar.foreground": "#e7e7e7"
     },
-    "peacock.color": "#4287f5"
+    "peacock.color": "#c242f5"
 }
