change endpoint name for GET to reflect restricted.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,18 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#d272f8",
-        "activityBar.activeBorder": "#f9d886",
+        "activityBar.background": "#65c89b",
+        "activityBar.activeBorder": "#945bc4",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#f9d886",
-        "activityBarBadge.foreground": "#15202b",
-        "titleBar.activeBackground": "#c242f5",
-        "titleBar.inactiveBackground": "#c242f599",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.background": "#c242f5",
-        "statusBarItem.hoverBackground": "#d272f8",
-        "statusBar.foreground": "#e7e7e7"
+        "activityBarBadge.background": "#945bc4",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "titleBar.activeBackground": "#42b883",
+        "titleBar.inactiveBackground": "#42b88399",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveForeground": "#15202b99",
+        "statusBar.background": "#42b883",
+        "statusBarItem.hoverBackground": "#359268",
+        "statusBar.foreground": "#15202b"
     },
-    "peacock.color": "#c242f5"
+    "peacock.color": "#42b883"
 }
